chore: fix file path for automated releases

--- a/.github/workflows/release-binary.yaml
+++ b/.github/workflows/release-binary.yaml
@@ -6,7 +6,7 @@ on:
     branches: ["main", "master"]
     # Release whenever this file changes
     paths:
-      - "./version.txt"
+      - "version.txt"
   workflow_dispatch:
 
 permissions:
