chore: release `--debug` from `goreleaser`
It seems it no longer recognized
Ref: https://github.com/ashishb/wp2hugo/actions/runs/9735144099/job/26864012080

```
/opt/hostedtoolcache/goreleaser-action/2.0.1/x64/goreleaser release --clean --debug
  ⨯ command failed                                   error=unknown flag: --debug
Error: The process '/opt/hostedtoolcache/goreleaser-action/2.0.1/x64/goreleaser' failed with exit code 1
```

--- a/.github/workflows/release-binary.yaml
+++ b/.github/workflows/release-binary.yaml
@@ -77,6 +77,6 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --clean --debug
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
