--- a/.github/workflows/release-binary.yaml
+++ b/.github/workflows/release-binary.yaml
@@ -9,9 +9,6 @@ on:
       - "version.txt"
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
 
   generateTag:
@@ -19,6 +16,8 @@ jobs:
     name: "Auto-generate Git tag whenever version.txt changes"
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    permissions:
+      contents: write
 
     steps:
 
@@ -26,6 +25,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
 
       - name: Fetch git tags
         run: git fetch --force --tags
@@ -55,6 +55,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: generateTag
     timeout-minutes: 15
+    permissions:
+      contents: write
 
     steps:
 
@@ -62,6 +64,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
 
       - name: Fetch git tags
         run: git fetch --force --tags
@@ -69,7 +72,9 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: stable
-          cache-dependency-path: src/wp2hugo/go.sum
+          # To prevent cache poisoning
+          # Ref: https://woodruffw.github.io/zizmor/audits/#cache-poisoning
+          cache: false
 
       # More assembly might be required: Docker logins, GPG, etc. It all depends
       # on your needs.
