--- a/.github/workflows/build-go.yaml
+++ b/.github/workflows/build-go.yaml
@@ -3,14 +3,19 @@
 name: Build Go
 
 on:  # yamllint disable-line rule:truthy
+  workflow_dispatch:
   push:
     branches: [main, master]
     paths:
+      - "**/go.mod"
+      - "**/go.sum"
       - "**.go"
       - ".github/workflows/build-go.yaml"
   pull_request:
     branches: [main, master]
     paths:
+      - "**/go.mod"
+      - "**/go.sum"
       - "**.go"
       - ".github/workflows/build-go.yaml"
 
