--- a/.github/workflows/format-go.yaml
+++ b/.github/workflows/format-go.yaml
@@ -19,8 +19,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-jobs:
+permissions:
+  contents: read
 
+jobs:
   validateCodeFormatGo:
     runs-on: ubuntu-latest
     timeout-minutes: 15
