--- a/.github/workflows/format-go.yaml
+++ b/.github/workflows/format-go.yaml
@@ -36,18 +36,9 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
+          cache-dependency-path: |
+            src/wp2hugo/go.mod
           go-version-file: src/wp2hugo/go.mod
-
-      # Ref: https://github.com/actions/cache/blob/main/examples.md#go---modules
-      # Warning: This is Linux specific
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
 
       - name: Validate code formatting
         run: |
