ci: improve GoReleaser config by fetching `hugomanager` specific tags

--- a/.github/workflows/release-hugomanager.yaml
+++ b/.github/workflows/release-hugomanager.yaml
@@ -67,7 +67,7 @@ jobs:
           persist-credentials: true
 
       - name: Fetch git tags
-        run: git fetch --force --tags
+        run: git fetch --force --tags origin 'refs/tags/*-hugomanager:refs/tags/*-hugomanager'
 
       - uses: actions/setup-go@v5
         with:
