--- a/.github/workflows/release-hugomanager.yaml
+++ b/.github/workflows/release-hugomanager.yaml
@@ -64,6 +64,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          fetch-tags: "false"  # We will fetch them explicitly in the next step
           persist-credentials: true
 
       - name: Fetch git tags
