--- a/.github/workflows/release-wp2hugo.yaml
+++ b/.github/workflows/release-wp2hugo.yaml
@@ -6,7 +6,7 @@ on:
     branches: ["main", "master"]
     # Release whenever this file changes
     paths:
-      - "version.txt"
+      - "./src/wp2hugo/cmd/wp2hugo/version.txt"
   workflow_dispatch:
 
 jobs:
@@ -39,7 +39,7 @@ jobs:
       - name: Read version name
         id: read-version
         run: |
-          echo "version=$(cat ./version.txt)" > "$GITHUB_OUTPUT"
+          echo "version=$(cat ./src/wp2hugo/cmd/wp2hugo/version.txt)" > "$GITHUB_OUTPUT"
 
       - name: Create new tag
         id: tag_version
