--- a/.github/workflows/release-wp2hugo.yaml
+++ b/.github/workflows/release-wp2hugo.yaml
@@ -6,7 +6,7 @@ on:
     branches: ["main", "master"]
     # Release whenever this file changes
     paths:
-      - "./src/wp2hugo/cmd/wp2hugo/version.txt"
+      - "src/wp2hugo/cmd/wp2hugo/version.txt"
   workflow_dispatch:
 
 jobs:
