ci: fix zizmor installation
Ref: https://github.com/zizmorcore/zizmor/issues/497#issuecomment-2619325012

--- a/.github/workflows/lint-github-actions.yaml
+++ b/.github/workflows/lint-github-actions.yaml
@@ -72,7 +72,7 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
 
       - name: Install zizmor
-        run: cargo install zizmor
+        run: cargo install --locked zizmor
 
       - name: Run zizmor on GitHub Actions
         run: zizmor --config .github/zizmor_config.yaml .github/workflows/*
